MODUL-977 - fix misalignment between labeled and not labeled  fields (#961)
* MODUL-977 - fix misalignment between labeled fields and not labeled

* MODUL-977 - fix snapshots

* MODUL-977 - Fix more snapshots

* MODUL-977 - still fixing snapshot...

* MODUL-977 - Tweaks to storybook stories

* MODUL-977 - Update m-textfield storybook snapshot

* MODUL-977 - fix snapshot

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -193,11 +193,8 @@ $m-input-style-base-height: $m-line-height + em;
         font-weight: $m-font-weight--light;
         text-decoration: none;
         background-color: $m-color--white;
-
-        .m-input-style.m--has-label & {
-            min-height: $m-input-style-base-height;
-            margin-top: -$m-input-style-base-height;
-        }
+        min-height: $m-input-style-base-height;
+        margin-top: -$m-input-style-base-height;
 
         .m-icon-button.m-icon-button,
         .m-icon.m-icon {
